ci/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-deployment
  labels:
    app: otus
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 2
  replicas: 3
  selector:
    matchLabels:
      app: otus
  template:
    metadata:
      labels:
        app: otus
    spec:
      containers:
      - name: otus-1
        command:
          - sh
          - ./entrypoint.sh
          - run
        image: gsorokin/otus_1:latest
        ports:
          - name: web
            containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: http
        resources:
          requests:
            memory: "128Mi"
            cpu: "200m"
          limits:
            memory: "256Mi"
            cpu: "500m"
