ci/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-service
spec:
  type: NodePort
  selector:
    app: otus
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
